k8s/simplebank-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: vivishadow/simplebank-api:latest
        ports:
        - containerPort: 8080
        volumeMounts:             # 把下面挂载到Pod中的volume挂载到容器中
          - name: simple-bank-config
            mountPath: /app/app.env
            subPath: app.env
      volumes:
        - name: simple-bank-config
          configMap:
            name: simple-bank-config
---
apiVersion: v1
kind: Service
metadata:
  name: simple-bank-api-service
spec:
  selector:
    app: simple-bank-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
